feat: fotos do produto